# redesigned-guacamole

./: .gitignore  Cargo.toml  README.md  walpurgis.toml
config/: dev.toml
data/arenas/: simple.ron
scripts/: generate_docs.sh
src/: game.rs  inputs.rs  logging.rs  main.rs  physics.rs  screens.rs  settings.rs  util.rs  walpurgis.rs
src/game/: battledata.rs  mod.rs
src/game/arena/: mod.rs  platform.rs
src/game/player/: action.rs  inputs.rs  meta.rs  mod.rs
src/inputs/: mod.rs
src/physics/: collision.rs  mod.rs  obb.rs
src/screens/: battle.rs  mod.rs
src/screens/battle/: interactions.rs  platform.rs  player.rs
src/screens/battle/arena/: mod.rs
src/screens/battle/player/: inputs.rs  meta.rs  mod.rs  stance.rs
src/screens/mainmenu/: mod.rs
src/util/: cartesian.rs  mod.rs  result.rs  string.rs  tuple.rs
