[package]
name = "wip-redesigned-guacamole"
version = "0.1.0"
authors = ["yoloVoe <mainali.subrat@utexas.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.7.2"
log = "0.4.8"
fern = "0.5.8"
chrono = "0.4.9"
