[package]
name = "walpurgis"
version = "0.1.0"
authors = ["yoloVoe <mainali.subrat@utexas.edu>", "Benjamin Xu <ben.xu.cs@gmail.com>", "Michael Ott <otterm13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
config = "0.9.3"
fern = { version="0.5.8", features = ["colored"] }
ggez = "0.5.1"
log = "0.4.8"
rand = "0.7.2"
ron = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
